--- a/Dockerfile.llama
+++ b/Dockerfile.llama
@@ -1,22 +1,15 @@
-# Use an appropriate base image (e.g., a lightweight Linux distro with required dependencies)
-FROM python:3.10-slim
+FROM debian:bullseye-slim
 
-# Set the working directory
 WORKDIR /app
 
-# Install necessary system dependencies (adjust as needed)
-RUN apt-get update && apt-get install -y \
-    build-essential \
-    && rm -rf /var/lib/apt/lists/*
+# Install curl and Ollama
+RUN apt-get update && \
+    apt-get install -y curl gnupg && \
+    curl -fsSL https://ollama.com/install.sh | sh && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Copy the LLaMA/Ollama server code to the container
-COPY . /app
-
-# Install dependencies for LLaMA/Ollama server (якщо потрібні)
-RUN pip install --no-cache-dir -r requirements.llama.txt
-
-# Expose port 11434 used by the LLaMA server
+# Expose the port used by ollama
 EXPOSE 11434
 
-# Set the CMD to run the LLaMA server
-CMD ["python", "run_llama.py"]
+# Start the Ollama server
+CMD ["ollama", "serve"]
